--- a/labs/index.html
+++ b/labs/index.html
@@ -99,7 +99,7 @@
 
 		<div class="section">Задание 2</div>
 
-		<p>В ответ на запрос сервер фондовой биржи вернул следующий объект:</p>
+		<p>В ответ на запрос сервер фондовой биржи вернул следующий объект, содержащий названия акций, их цену и изменение цены:</p>
 
 		<pre><code class="language-js">[
 	{
@@ -134,7 +134,7 @@
 	}
 ]</code></pre>
 
-		<p>Динамически сгенерируйте на его основании таблицу с условным форматированием: положительное изменение должно быть окрашено в зелёный, а отрицательное — в красный.</p>
+		<p>Динамически сгенерируйте и выведите на его основании таблицу с условным форматированием: положительное изменение цены акций должно быть окрашено в зелёный, а отрицательное — в красный цвета. Используйте циклы.</p>
 		<div class="button">
 			<a class="next" href="#">Лабораторная работа №2 &raquo;</a>
 		</div>
