--- a/info.html
+++ b/info.html
@@ -1,60 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>React Specification</title>
+    <title>СПРАВОЧНИК &#124; REACT.JS</title>
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/content.css">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="libraries/header.js"></script>
 </head>
+
 <body>
 
-<section class="nav-bar">
+    <section class="nav-bar">
         <div class="nav-container">
             <div class="brand">
-                <a href="#"><img src="images/react-logo.png">React.js</a>
+                <a href="index.html"><img src="images/react-logo.png">Справочник</a>
             </div>
             <nav>
                 <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
                 <ul class="nav-list">
-                    <!--<li>
-                    <a href="#">Home</a>
-                </li>-->
-
                     <li>
-                        <a href="#">Выпадающее меню</a>
-                        <ul class="nav-dropdown">
-                            <li>
-                                <a href="#">Пункт1</a>
-                            </li>
-                            <li>
-                                <a href="#">Пункт2</a>
-                            </li>
-                            <li>
-                                <a href="#">Пункт3</a>
-                            </li>
-                        </ul>
+                        <a href="index.html">Главная</a>
                     </li>
                     <li>
-                        <a href="index.html">React.js</a>
+                        <a href="labs.html">Лабараторные работы</a>
                     </li>
                     <li>
-                        <a href="labs/index.html">Лаба 1</a>
+                        <a href="examples.html">Содержание</a>
                     </li>
                     <li>
-                        <a href="#">Справочник</a>
+                        <a href="info.html">Справочник</a>
                     </li>
                 </ul>
             </nav>
         </div>
     </section>
-<div id="delimiter"></div>
+    <div id="delimiter"></div>
 
-<div class="content">
-    <p class="section">Какая-то информация</p>
-</div>
+    <div class="content">
+        <p class="section">Какая-то информация</p>
+    </div>
 
 </body>
+
 </html>
