--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <a href="index.html">Главная</a>
                     </li>
                     <li>
-                        <a href="labs.html">Лабараторные работы</a>
+                        <a href="labs.html">Лабораторные работы</a>
                     </li>
                     <li>
                         <a href="examples.html">Содержание</a>
