--- a/labs.html
+++ b/labs.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ЛАБАРАТОРНЫЕ РАБОТЫ &#124; REACT.JS</title>
+    <title>ЛАБОРАТОРНЫЕ РАБОТЫ &#124; REACT.JS</title>
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/content.css">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
@@ -16,7 +16,7 @@
     <section class="nav-bar">
         <div class="nav-container">
             <div class="brand">
-                <a href="index.html"><img src="images/react-logo.png">Лабараторные работы</a>
+                <a href="index.html"><img src="images/react-logo.png">Лабораторные работы</a>
             </div>
             <nav>
                 <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
@@ -26,7 +26,7 @@
                         <a href="index.html">Главная</a>
                     </li>
                     <li>
-                        <a href="labs.html">Лабараторные работы</a>
+                        <a href="labs.html">Лабораторные работы</a>
                     </li>
                     <li>
                         <a href="examples.html">Содержание</a>
@@ -41,7 +41,7 @@
     <div id="delimiter"></div>
 
     <div class="content">
-        <p class="section">Лабараторные работы по React.js</p>
+        <p class="section">Лабораторные работы по React.js</p>
         <div class="lr-block">
             <ol class="lr-list">
                <p class="section-title">Раздел 1. Установка и введение в React</p>
