Фикс подключения CSS

--- a/examples/advanced/forwarding-refs/index.html
+++ b/examples/advanced/forwarding-refs/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Передача ссылок подробнее</title>
 
-    <link rel="stylesheet" href="../../../../web-page/css/header.css">
-    <link rel="stylesheet" href="../../../../web-page/css/content.css">
+    <link rel="stylesheet" href="../../../css/header.css">
+    <link rel="stylesheet" href="../../../css/content.css">
     <link rel="stylesheet" href="../../../libraries/prism.css">
 
     <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
