--- a/examples/advanced/typechecking-with-proptypes/index.html
+++ b/examples/advanced/typechecking-with-proptypes/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <title>Проверка типов с помощью PropTypes</title>
 
-    <link rel="stylesheet" href="../../../../web-page/css/header.css">
-    <link rel="stylesheet" href="../../../../web-page/css/content.css">
+    <link rel="stylesheet" href="../../../css/header.css">
+    <link rel="stylesheet" href="../../../css/content.css">
     <link rel="stylesheet" href="../../../libraries/prism.css">
-
+    
     <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
