--- a/examples/installation/add-to-app/index.html
+++ b/examples/installation/add-to-app/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <title>Добавьте React</title>
 
-  <link rel="stylesheet" href="../../../../web-page/css/header.css">
-  <link rel="stylesheet" href="../../../../web-page/css/content.css">
+  <link rel="stylesheet" href="../../../css/header.css">
+  <link rel="stylesheet" href="../../../css/content.css">
   <link rel="stylesheet" href="../../../libraries/prism.css">
 
   <link rel="stylesheet" href="style.css">
