--- a/examples/installation/cdn-links/index.html
+++ b/examples/installation/cdn-links/index.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <title>Система доставки контента</title>
 
-  <link rel="stylesheet" href="../../../../web-page/css/header.css">
-  <link rel="stylesheet" href="../../../../web-page/css/content.css">
+  <link rel="stylesheet" href="../../../css/header.css">
+  <link rel="stylesheet" href="../../../css/content.css">
   <link rel="stylesheet" href="../../../libraries/prism.css">
 
   <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
