--- a/examples/redux/usage-with-react/index.html
+++ b/examples/redux/usage-with-react/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Использование с React</title>
 
-    <link rel="stylesheet" href="../../../../web-page/css/header.css">
-    <link rel="stylesheet" href="../../../../web-page/css/content.css">
+    <link rel="stylesheet" href="../../../css/header.css">
+    <link rel="stylesheet" href="../../../css/content.css">
     <link rel="stylesheet" href="../../../libraries/prism.css">
 
     <script src="../../../libraries/prism.js"></script>
