--- a/labs.html
+++ b/labs.html
@@ -45,23 +45,23 @@
         <div class="lr-block">
             <ol class="lr-list">
                <p class="section-title">Раздел 1. Установка и введение в React</p>
-                <li><a href="labs/lab1/index.html">Лабараторная работа. Тема.</a></li>
-                <li><a href="labs/lab2/index.html">Лабараторная работа. Тема.</a></li>
-                <li><a href="labs/lab3/index.html">Лабараторная работа. Тема.</a></li>
-                <li><a href="#">Лабараторная работа. Тема.</a></li>
-                <li><a href="#">Лабараторная работа. Тема.</a></li>
+                <li><a href="labs/lab1/index.html">Лабораторная  работа. Тема.</a></li>
+                <li><a href="labs/lab2/index.html">Лабораторная  работа. Тема.</a></li>
+                <li><a href="labs/lab3/index.html">Лабораторная  работа. Тема.</a></li>
+                <li><a href="#">Лабораторная  работа. Тема.</a></li>
+                <li><a href="#">Лабораторная  работа. Тема.</a></li>
                 <p class="section-title">Раздел 2. Основы React</p>
-                <li><a href="#">Лабараторная работа. Тема.</a></li>
-                <li><a href="#">Лабараторная работа. Тема.</a></li>
-                <li><a href="#">Лабараторная работа. Тема.</a></li>
-                <li><a href="#">Лабараторная работа. Тема.</a></li>
-                <li><a href="#">Лабараторная работа. Тема.</a></li>
+                <li><a href="#">Лабораторная  работа. Тема.</a></li>
+                <li><a href="#">Лабораторная  работа. Тема.</a></li>
+                <li><a href="#">Лабораторная  работа. Тема.</a></li>
+                <li><a href="#">Лабораторная  работа. Тема.</a></li>
+                <li><a href="#">Лабораторная  работа. Тема.</a></li>
                 <p class="section-title">Раздел 3. Redux.js</p>
-                <li><a href="#">Лабараторная работа. Тема.</a></li>
-                <li><a href="#">Лабараторная работа. Тема.</a></li>
-                <li><a href="#">Лабараторная работа. Тема.</a></li>
-                <li><a href="#">Лабараторная работа. Тема.</a></li>
-                <li><a href="#">Лабараторная работа. Тема.</a></li>
+                <li><a href="#">Лабораторная  работа. Тема.</a></li>
+                <li><a href="#">Лабораторная  работа. Тема.</a></li>
+                <li><a href="#">Лабораторная  работа. Тема.</a></li>
+                <li><a href="#">Лабораторная  работа. Тема.</a></li>
+                <li><a href="#">Лабораторная  работа. Тема.</a></li>
             </ol>
         </div>
         
