--- a/examples/quick-start/composition-vs-inheritance/index.html
+++ b/examples/quick-start/composition-vs-inheritance/index.html
@@ -21,17 +21,32 @@
 </head>
 <body>
 
-<div class="header">
-    <a href="./../../../examples.html" class="logo">
-        <img src="../../../images/react-logo.png">
-        <p>React.js</p>
-    </a>
-    <div class="header-right">
-        <a href="../../../index.html">React.js</a>
-        <a href="../../../examples.html">Содержание</a>
-        <a href="../../../info.html">Информация</a>
-    </div>
-</div>
+    <section class="nav-bar">
+        <section class="nav-bar">
+            <div class="nav-container">
+                <div class="brand">
+                    <a href="index.html"><img src="../../../images/react-logo.png">Содержание</a>
+                </div>
+                <nav>
+                    <div class="nav-mobile"><a id="nav-toggle" href="#!"><span></span></a></div>
+                    <ul class="nav-list">
+                        <li>
+                            <a href="../../../index.html">Главная</a>
+                        </li>
+                        <li>
+                            <a href="../../../labs.html">Лабораторные работы</a>
+                        </li>
+                        <li>
+                            <a href="../../../examples.html">Содержание</a>
+                        </li>
+                        <li>
+                            <a href="../../../info.html">Справочник</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </section>
+
 <div id="delimiter"></div>
 
 <div class="content">
