Подключён скрипт для открытия меню и jQuery

--- a/examples/quick-start/lifting-state-up/index.html
+++ b/examples/quick-start/lifting-state-up/index.html
@@ -18,6 +18,8 @@
     <script type="text/babel" src="script2.js"></script>
     <script type="text/babel" src="script3.js"></script>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="../../../libraries/header.js"></script>
 </head>
 <body>
 
