--- a/examples/installation/add-to-app/index.html
+++ b/examples/installation/add-to-app/index.html
@@ -17,6 +17,8 @@
 
   <script src="../../../libraries/prism.js"></script>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src="../../../libraries/header.js"></script>
 </head>
 
 <body>
@@ -45,7 +47,7 @@
       </nav>
     </div>
   </section>
-  
+
   <div id="delimiter"></div>
 
   <div class="content">
