--- a/examples/installation/cdn-links/index.html
+++ b/examples/installation/cdn-links/index.html
@@ -15,6 +15,8 @@
 
   <script src="../../../libraries/prism.js"></script>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src="../../../libraries/header.js"></script>
 </head>
 
 <body>
@@ -43,7 +45,7 @@
       </nav>
     </div>
   </section>
-  
+
   <div id="delimiter"></div>
 
   <div class="content">
