--- a/examples/quick-start/forms/index.html
+++ b/examples/quick-start/forms/index.html
@@ -17,6 +17,8 @@
     <script type="text/babel" src="script.js"></script>
     <script type="text/babel" src="script2.js"></script>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="../../../libraries/header.js"></script>
 </head>
 <body>
 
@@ -45,7 +47,7 @@
                 </nav>
             </div>
         </section>
-        
+
 <div id="delimiter"></div>
 
 <div class="content">
