--- a/examples/quick-start/handling-events/index.html
+++ b/examples/quick-start/handling-events/index.html
@@ -16,6 +16,8 @@
 
     <script type="text/babel" src="script.js"></script>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="../../../libraries/header.js"></script>
 </head>
 <body>
 
