--- a/examples/installation/new-app/index.html
+++ b/examples/installation/new-app/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Создание нового приложения</title>
 
   <link rel="stylesheet" href="../../../css/header.css">
