--- a/examples/quick-start/lifting-state-up/index.html
+++ b/examples/quick-start/lifting-state-up/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Передача состояния наверх</title>
 
     <link rel="stylesheet" href="../../../css/header.css">
