Новые кнопки, Font Awesome на всех страницах

--- a/examples/advanced/higher-order-comp/index.html
+++ b/examples/advanced/higher-order-comp/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../../../css/header.css">
     <link rel="stylesheet" href="../../../css/content.css">
     <link rel="stylesheet" href="../../../libraries/prism.css">
+    <link rel="stylesheet" href="../../../libraries/font-awesome/css/font-awesome.css">
 
     <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
@@ -410,9 +411,9 @@
          <CustomButton color="red"/>
     </code></pre>
     <p>Это не идеальное решение. Разработчики рекомендуют, чтобы ссылки ref оставались заботой сторонних библиотек, а не требовали, чтобы вы вручную их обрабатывали. На данный момент ведется исследование путей решения этой проблемы, так что использование старших компонентов под наблюдением не находится.</p>
-    <div class="button">
-    <a href="../../advanced/error-boundaries/">&laquo; Назад</a>
-    <a class="next" href="../../advanced/forwarding-refs/">Далее &raquo;</a>
+    <div class="lr-btn">
+        <button class="atuin-btn" onclick="window.location.href = '../../advanced/error-boundaries/index.html';"><i class="fa fa-chevron-circle-left" aria-hidden="true"> </i><span>_</span>Назад</button>
+        <button class="atuin-btn" onclick="window.location.href = '../../advanced/forwarding-refs/index.html';">Далее<span>_</span><i class="fa fa-chevron-circle-right" aria-hidden="true"></i> </button>
     </div>
 </div>
 
