--- a/examples/advanced/portals/index.html
+++ b/examples/advanced/portals/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../../../css/header.css">
     <link rel="stylesheet" href="../../../css/content.css">
     <link rel="stylesheet" href="../../../libraries/prism.css">
+    <link rel="stylesheet" href="../../../libraries/font-awesome/css/font-awesome.css">
 
     <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
@@ -191,9 +192,9 @@
     </code></pre>
 
     <p>Захват события, всплывающего из портала в родительском компоненте, позволяет создавать более гибкие абстракции, которые по своей сути не зависят от порталов. Например, если вы отрисовываете компонент &lt;Modal />, родитель может захватывать свои события независимо от того, реализован ли он с помощью порталов.</p>
-    <div class="button">
-        <a href="../../advanced/context">&laquo; Назад</a>
-        <a class="next" href="../../advanced/error-boundaries/">Далее &raquo;</a>
+    <div class="lr-btn">
+        <button class="atuin-btn" onclick="window.location.href = '../../advanced/context/index.html';"><i class="fa fa-chevron-circle-left" aria-hidden="true"> </i><span>_</span>Назад</button>
+        <button class="atuin-btn" onclick="window.location.href = '../../advanced/error-boundaries/index.html';">Далее<span>_</span><i class="fa fa-chevron-circle-right" aria-hidden="true"></i> </button>
     </div>
 </div>
 
