--- a/examples/installation/try-react/index.html
+++ b/examples/installation/try-react/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="../../../css/header.css">
   <link rel="stylesheet" href="../../../css/content.css">
   <link rel="stylesheet" href="../../../libraries/prism.css">
+  <link rel="stylesheet" href="../../../libraries/font-awesome/css/font-awesome.css">
 
   <link rel="stylesheet" href="style.css">
 
@@ -107,8 +108,8 @@
       </ul>
     </p>
 
-    <div class="button">
-      <a class="next" href="../../installation/new-app/">Далее &raquo;</a>
+    <div class="lr-btn">
+        <button class="atuin-btn" onclick="window.location.href = '../../installation/new-app/index.html';">Далее<span>_</span><i class="fa fa-chevron-circle-right" aria-hidden="true"></i> </button>
     </div>
 
   </div>
