--- a/examples/quick-start/composition-vs-inheritance/index.html
+++ b/examples/quick-start/composition-vs-inheritance/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../../../css/header.css">
     <link rel="stylesheet" href="../../../css/content.css">
     <link rel="stylesheet" href="../../../libraries/prism.css">
+    <link rel="stylesheet" href="../../../libraries/font-awesome/css/font-awesome.css">
     <link rel="stylesheet" href="style.css">
 
     <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
@@ -230,9 +231,9 @@
     <p>Если вы хотите повторно использовать функциональность, не относящуюся к UI, то мы советуем вам извлечь её в
     отдельный JavaScript-модуль. Компоненты смогут брать и использовать эту функцию, объект или класс, не расширяя их.</p>
 
-    <div class="button">
-        <a href="../../quick-start/lifting-state-up/">&laquo; Назад</a>
-        <a class="next" href="../../quick-start/thinking-in-react/">Далее &raquo;</a>
+    <div class="lr-btn">
+        <button class="atuin-btn" onclick="window.location.href = '../../quick-start/lifting-state-up/index.html';"><i class="fa fa-chevron-circle-left" aria-hidden="true"> </i><span>_</span>Назад</button>
+        <button class="atuin-btn" onclick="window.location.href = '../../quick-start/thinking-in-react/index.html';">Далее<span>_</span><i class="fa fa-chevron-circle-right" aria-hidden="true"></i> </button>
     </div>
 </div>
 
