--- a/examples/quick-start/rendering-elements/index.html
+++ b/examples/quick-start/rendering-elements/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../../../css/header.css">
     <link rel="stylesheet" href="../../../css/content.css">
     <link rel="stylesheet" href="../../../libraries/prism.css">
+    <link rel="stylesheet" href="../../../libraries/font-awesome/css/font-awesome.css">
 
     <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
@@ -135,9 +136,9 @@
     <p>По опыту скажем, что обдумывание того, как должен выглядеть UI в данный момент времени, а не как он должен
     изменяться с течение времени, позволяет устранить целый класс ошибок.</p>
 
-    <div class="button">
-        <a href="../../quick-start/introducing-jsx/">&laquo; Назад</a>
-        <a class="next" href="../../quick-start/components-and-props/">Далее &raquo;</a>
+    <div class="lr-btn">
+        <button class="atuin-btn" onclick="window.location.href = '../../quick-start/introducing-jsx/index.html';"><i class="fa fa-chevron-circle-left" aria-hidden="true"> </i><span>_</span>Назад</button>
+        <button class="atuin-btn" onclick="window.location.href = '../../quick-start/components-and-props/index.html';">Далее<span>_</span><i class="fa fa-chevron-circle-right" aria-hidden="true"></i> </button>
     </div>
 </div>
 
