--- a/examples/redux/about-redux/index.html
+++ b/examples/redux/about-redux/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../../../css/header.css">
     <link rel="stylesheet" href="../../../css/content.css">
     <link rel="stylesheet" href="../../../libraries/prism.css">
+    <link rel="stylesheet" href="../../../libraries/font-awesome/css/font-awesome.css">
 
     <script src="../../../libraries/prism.js"></script>
 
@@ -64,8 +65,9 @@
 
     <p>Да, эти рекомендации являются субъективными и расплывчатыми, но это справедливо. Точка, в которой вы должны
     интегрировать Redux в ваше приложение, отличается для каждого пользователя и каждого приложения.</p>
-    <div class="button">
-        <a class="next" href="../../redux/install/">Далее &raquo;</a>
+
+    <div class="lr-btn">
+        <button class="atuin-btn" onclick="window.location.href = '../../redux/install/index.html';">Далее<span>_</span><i class="fa fa-chevron-circle-right" aria-hidden="true"></i> </button>
     </div>
 
 </div>
