--- a/examples/redux/actions/index.html
+++ b/examples/redux/actions/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../../../css/header.css">
     <link rel="stylesheet" href="../../../css/content.css">
     <link rel="stylesheet" href="../../../libraries/prism.css">
+    <link rel="stylesheet" href="../../../libraries/font-awesome/css/font-awesome.css">
 
     <script src="../../../libraries/prism.js"></script>
 
@@ -145,9 +146,9 @@
     <mark>connect()</mark> из react-redux. Вы можете использовать функцию <mark>bindActionCreators()</mark> для
     автоматического привязывания большого количества генераторов действий к функции <mark>dispatch()</mark>.</p>
 
-    <div class="button">
-        <a href="../../redux/introduction/">&laquo; Назад</a>
-        <a class="next" href="../../redux/reducers/">Далее &raquo;</a>
+    <div class="lr-btn">
+        <button class="atuin-btn" onclick="window.location.href = '../../redux/introduction/index.html';"><i class="fa fa-chevron-circle-left" aria-hidden="true"> </i><span>_</span>Назад</button>
+        <button class="atuin-btn" onclick="window.location.href = '../../redux/reducers/index.html';">Далее<span>_</span><i class="fa fa-chevron-circle-right" aria-hidden="true"></i> </button>
     </div>
 
 </div>
