--- a/examples/redux/data-flow/index.html
+++ b/examples/redux/data-flow/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../../../css/header.css">
     <link rel="stylesheet" href="../../../css/content.css">
     <link rel="stylesheet" href="../../../libraries/prism.css">
+    <link rel="stylesheet" href="../../../libraries/font-awesome/css/font-awesome.css">
 
     <script src="../../../libraries/prism.js"></script>
 
@@ -144,11 +145,10 @@
         </li>
     </ol>
 
-    <div class="button">
-        <a href="../../redux/store/">&laquo; Назад</a>
-        <a class="next" href="../../redux/usage-with-react/">Далее &raquo;</a>
+    <div class="lr-btn">
+        <button class="atuin-btn" onclick="window.location.href = '../../redux/store/index.html';"><i class="fa fa-chevron-circle-left" aria-hidden="true"> </i><span>_</span>Назад</button>
+        <button class="atuin-btn" onclick="window.location.href = '../../redux/usage-with-react/index.html';">Далее<span>_</span><i class="fa fa-chevron-circle-right" aria-hidden="true"></i> </button>
     </div>
-
 </div>
 
 </body>
