--- a/examples/redux/install/index.html
+++ b/examples/redux/install/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../../../css/header.css">
     <link rel="stylesheet" href="../../../css/content.css">
     <link rel="stylesheet" href="../../../libraries/prism.css">
+    <link rel="stylesheet" href="../../../libraries/font-awesome/css/font-awesome.css">
 
     <script src="../../../libraries/prism.js"></script>
 
@@ -70,9 +71,10 @@
     поэтому мы рекомендуем использовать сборщики модулей CommonJS, такие как
     <a href="https://webpack.js.org/">Webpack</a> и <a href="http://browserify.org/">Browserify</a> для
     наиболее комфортной разработки.</p>
-    <div class="button">
-        <a href="../../redux/about-redux/">&laquo; Назад</a>
-        <a class="next" href="../../redux/introduction/">Далее &raquo;</a>
+
+    <div class="lr-btn">
+        <button class="atuin-btn" onclick="window.location.href = '../../redux/about-redux/index.html';"><i class="fa fa-chevron-circle-left" aria-hidden="true"> </i><span>_</span>Назад</button>
+        <button class="atuin-btn" onclick="window.location.href = '../../redux/introduction/index.html';">Далее<span>_</span><i class="fa fa-chevron-circle-right" aria-hidden="true"></i> </button>
     </div>
 
 </div>
