--- a/examples/redux/introduction/index.html
+++ b/examples/redux/introduction/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../../../css/header.css">
     <link rel="stylesheet" href="../../../css/content.css">
     <link rel="stylesheet" href="../../../libraries/prism.css">
+    <link rel="stylesheet" href="../../../libraries/font-awesome/css/font-awesome.css">
 
     <script src="../../../libraries/prism.js"></script>
 
@@ -91,9 +92,9 @@
     контролировать порядок, в котором они вызываются, отправлять дополнительные данные или даже писать переиспользуемые
     редюсеры для общих задач, например, для пагинации.</p>
 
-    <div class="button">
-        <a href="../../redux/install/">&laquo; Назад</a>
-        <a class="next" href="../../redux/actions/">Далее &raquo;</a>
+    <div class="lr-btn">
+        <button class="atuin-btn" onclick="window.location.href = '../../redux/install/index.html';"><i class="fa fa-chevron-circle-left" aria-hidden="true"> </i><span>_</span>Назад</button>
+        <button class="atuin-btn" onclick="window.location.href = '../../redux/actions/index.html';">Далее<span>_</span><i class="fa fa-chevron-circle-right" aria-hidden="true"></i> </button>
     </div>
 
 </div>
