--- a/examples/redux/store/index.html
+++ b/examples/redux/store/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../../../css/header.css">
     <link rel="stylesheet" href="../../../css/content.css">
     <link rel="stylesheet" href="../../../libraries/prism.css">
+    <link rel="stylesheet" href="../../../libraries/font-awesome/css/font-awesome.css">
 
     <script src="../../../libraries/prism.js"></script>
 
@@ -110,11 +111,10 @@
     делать этого в этом руководстве, но с этого момента Вы можете писать тесты для редюсеров и генераторов действий.
     Вызывайте редюсеры и делайте проверку того, что они возвращают.</p>
 
-    <div class="button">
-        <a href="../../redux/reducers/">&laquo; Назад</a>
-        <a class="next" href="../../redux/data-flow/">Далее &raquo;</a>
+    <div class="lr-btn">
+        <button class="atuin-btn" onclick="window.location.href = '../../redux/reducers/index.html';"><i class="fa fa-chevron-circle-left" aria-hidden="true"> </i><span>_</span>Назад</button>
+        <button class="atuin-btn" onclick="window.location.href = '../../redux/data-flow/index.html';">Далее<span>_</span><i class="fa fa-chevron-circle-right" aria-hidden="true"></i> </button>
     </div>
-
 </div>
 
 </body>
