--- a/examples/advanced/forwarding-refs/index.html
+++ b/examples/advanced/forwarding-refs/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../../../css/header.css">
     <link rel="stylesheet" href="../../../css/content.css">
     <link rel="stylesheet" href="../../../libraries/prism.css">
+    <link rel="stylesheet" href="../../../libraries/font-awesome/css/font-awesome.css">
 
     <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
@@ -216,9 +217,9 @@ class FancyButton extends React.Component {
   }
   <CustomButton color="red"/>
     </code></pre>
-  <div class="button">
-  <a href="../../advanced/higher-order-comp/">&laquo; Назад</a>
-  <a class="next" href="../../advanced/render-props/">Далее &raquo;</a>
+  <div class="lr-btn">
+    <button class="atuin-btn" onclick="window.location.href = '../../advanced/higher-order-comp/index.html';"><i class="fa fa-chevron-circle-left" aria-hidden="true"> </i><span>_</span>Назад</button>
+    <button class="atuin-btn" onclick="window.location.href = '../../advanced/render-props/index.html';">Далее<span>_</span><i class="fa fa-chevron-circle-right" aria-hidden="true"></i> </button>
   </div>
 </div>
 
