--- a/examples/advanced/optimizing-perfomance/index.html
+++ b/examples/advanced/optimizing-perfomance/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../../../css/header.css">
     <link rel="stylesheet" href="../../../css/content.css">
     <link rel="stylesheet" href="../../../libraries/prism.css">
+    <link rel="stylesheet" href="../../../libraries/font-awesome/css/font-awesome.css">
 
     <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
@@ -90,12 +91,10 @@
     <p>Взаимодействуя со своей страницей, вы должны увидеть, что вокруг любых компонентов, которые были переотрисованы,
         мгновенно появляются цветные границы. Это позволяет вам выявлять повторные отрисовки, которые не были
         необходимыми.</p>
-
-    <div class="button">
-        <a href="../../advanced/uncontrolled-components">&laquo; Назад</a>
-        <a class="next" href="../../advanced/react-without-jsx">Далее &raquo;</a>
+    <div class="lr-btn">
+        <button class="atuin-btn" onclick="window.location.href = '../../advanced/uncontrolled-components/index.html';"><i class="fa fa-chevron-circle-left" aria-hidden="true"> </i><span>_</span>Назад</button>
+        <button class="atuin-btn" onclick="window.location.href = '../../advanced/react-without-jsx/index.html';">Далее<span>_</span><i class="fa fa-chevron-circle-right" aria-hidden="true"></i> </button>
     </div>
-
 </div>
 
 </body>
