--- a/examples/advanced/render-props/index.html
+++ b/examples/advanced/render-props/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../../../css/header.css">
     <link rel="stylesheet" href="../../../css/content.css">
     <link rel="stylesheet" href="../../../libraries/prism.css">
+    <link rel="stylesheet" href="../../../libraries/font-awesome/css/font-awesome.css">
 
     <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
@@ -347,9 +348,9 @@ return (
         <CustomButton color="red"/>
     </code></pre>
     <p>В случаях, когда вы не можете заранее привязать метод экземпляра в конструкторе, компонент &lt;Mouse> должен наследоваться от React.PureComponent.</p>
-    <div class="button">
-    <a href="../../advanced/forwarding-refs/">&laquo; Назад</a>
-    <a class="next" href="../../advanced/integrating-with-lib/">Далее &raquo;</a>
+    <div class="lr-btn">
+        <button class="atuin-btn" onclick="window.location.href = '../../advanced/forwarding-refs/index.html';"><i class="fa fa-chevron-circle-left" aria-hidden="true"> </i><span>_</span>Назад</button>
+        <button class="atuin-btn" onclick="window.location.href = '../../advanced/integrating-with-lib/index.html';">Далее<span>_</span><i class="fa fa-chevron-circle-right" aria-hidden="true"></i> </button>
     </div>
 </div>
 
