--- a/examples/advanced/static-typechecking/index.html
+++ b/examples/advanced/static-typechecking/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../../../css/header.css">
     <link rel="stylesheet" href="../../../css/content.css">
     <link rel="stylesheet" href="../../../libraries/prism.css">
+    <link rel="stylesheet" href="../../../libraries/font-awesome/css/font-awesome.css">
 
     <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
@@ -60,11 +61,10 @@
         <a href="https://flow.org/">Flow</a> и
         <a href="https://www.typescriptlang.org/">TypeScript</a>.</p>
 
-    <div class="button">
-        <a href="../../advanced/typechecking-with-proptypes">&laquo; Назад</a>
-        <a class="next" href="../../advanced/refs-and-dom">Далее &raquo;</a>
+    <div class="lr-btn">
+        <button class="atuin-btn" onclick="window.location.href = '../../advanced/typechecking-with-proptypes/index.html';"><i class="fa fa-chevron-circle-left" aria-hidden="true"> </i><span>_</span>Назад</button>
+        <button class="atuin-btn" onclick="window.location.href = '../../advanced/refs-and-dom/index.html';">Далее<span>_</span><i class="fa fa-chevron-circle-right" aria-hidden="true"></i> </button>
     </div>
-
 </div>
 
 </body>
