--- a/examples/advanced/typechecking-with-proptypes/index.html
+++ b/examples/advanced/typechecking-with-proptypes/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../../../css/header.css">
     <link rel="stylesheet" href="../../../css/content.css">
     <link rel="stylesheet" href="../../../libraries/prism.css">
+    <link rel="stylesheet" href="../../../libraries/font-awesome/css/font-awesome.css">
 
     <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
@@ -80,10 +81,10 @@
         данном примере мы используем PropTypes.string. Когда свойству предоставляется не валидное значение, будет
         показано предупреждение в консоли JavaScript. По соображениям производительности, propTypes работает только в
         режиме разработки.</p>
-
-    <div class="button">
-        <a href="../../advanced/jsx-in-depth">&laquo; Назад</a>
-        <a class="next" href="../../advanced/static-typechecking">Далее &raquo;</a>
+        
+    <div class="lr-btn">
+        <button class="atuin-btn" onclick="window.location.href = '../../advanced/jsx-in-depth/index.html';"><i class="fa fa-chevron-circle-left" aria-hidden="true"> </i><span>_</span>Назад</button>
+        <button class="atuin-btn" onclick="window.location.href = '../../advanced/static-typechecking/index.html';">Далее<span>_</span><i class="fa fa-chevron-circle-right" aria-hidden="true"></i> </button>
     </div>
 
 </div>
