--- a/examples/advanced/uncontrolled-components/index.html
+++ b/examples/advanced/uncontrolled-components/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../../../css/header.css">
     <link rel="stylesheet" href="../../../css/content.css">
     <link rel="stylesheet" href="../../../libraries/prism.css">
+    <link rel="stylesheet" href="../../../libraries/font-awesome/css/font-awesome.css">
 
     <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
@@ -93,9 +94,9 @@
         если вы хотите написать что-то на скорую руку. В остальных случаях вы должны использовать только контролируемые
         компоненты.</p>
 
-    <div class="button">
-        <a href="../../advanced/refs-and-dom">&laquo; Назад</a>
-        <a class="next" href="../../advanced/optimizing-perfomance">Далее &raquo;</a>
+    <div class="lr-btn">
+        <button class="atuin-btn" onclick="window.location.href = '../../advanced/refs-and-dom/index.html';"><i class="fa fa-chevron-circle-left" aria-hidden="true"> </i><span>_</span>Назад</button>
+        <button class="atuin-btn" onclick="window.location.href = '../../advanced/optimizing-perfomance/index.html';">Далее<span>_</span><i class="fa fa-chevron-circle-right" aria-hidden="true"></i> </button>
     </div>
 
 </div>
