--- a/examples/installation/add-to-app/index.html
+++ b/examples/installation/add-to-app/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="../../../css/header.css">
   <link rel="stylesheet" href="../../../css/content.css">
   <link rel="stylesheet" href="../../../libraries/prism.css">
+  <link rel="stylesheet" href="../../../libraries/font-awesome/css/font-awesome.css">
 
   <link rel="stylesheet" href="style.css">
 
@@ -157,11 +158,10 @@
       страницу для <a href="../cdn-links/index.html">CDN</a> ссылок.
     </p>
 
-    <div class="button">
-      <a href="../../installation/new-app/">&laquo; Назад</a>
-      <a class="next" href="../../installation/cdn-links/">Далее &raquo;</a>
+    <div class="lr-btn">
+        <button class="atuin-btn" onclick="window.location.href = '../../installation/new-app/index.html';"><i class="fa fa-chevron-circle-left" aria-hidden="true"> </i><span>_</span>Назад</button>
+        <button class="atuin-btn" onclick="window.location.href = '../../installation/cdn-links/index.html';">Далее<span>_</span><i class="fa fa-chevron-circle-right" aria-hidden="true"></i> </button>
     </div>
-
   </div>
 
 </body>
