--- a/examples/installation/new-app/index.html
+++ b/examples/installation/new-app/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="../../../css/header.css">
   <link rel="stylesheet" href="../../../css/content.css">
   <link rel="stylesheet" href="../../../libraries/prism.css">
+  <link rel="stylesheet" href="../../../libraries/font-awesome/css/font-awesome.css">
 
   <link rel="stylesheet" href="style.css">
 
@@ -118,11 +119,10 @@
       Если вы предпочитаете вручную настраивать проект, см. Раздел <a href="../add-to-app/index.html">Установка React</a> в следующем разделе.
     </p>
 
-    <div class="button">
-      <a href="../../installation/try-react/">&laquo; Назад</a>
-      <a class="next" href="../../installation/add-to-app/">Далее &raquo;</a>
+    <div class="lr-btn">
+        <button class="atuin-btn" onclick="window.location.href = '../../installation/try-react/index.html';"><i class="fa fa-chevron-circle-left" aria-hidden="true"> </i><span>_</span>Назад</button>
+        <button class="atuin-btn" onclick="window.location.href = '../../installation/add-to-app/index.html';">Далее<span>_</span><i class="fa fa-chevron-circle-right" aria-hidden="true"></i> </button>
     </div>
-
   </div>
 
 </body>
