--- a/examples/quick-start/components-and-props/index.html
+++ b/examples/quick-start/components-and-props/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../../../css/header.css">
     <link rel="stylesheet" href="../../../css/content.css">
     <link rel="stylesheet" href="../../../libraries/prism.css">
+    <link rel="stylesheet" href="../../../libraries/font-awesome/css/font-awesome.css">
 
     <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
@@ -300,9 +301,9 @@
     Состояние позволяет компонентам React изменять свой результат с течение времени в ответ на действия
     пользователя, сетевые запросы, и любые другие действия, не нарушая этого правила.</p>
 
-    <div class="button">
-        <a href="../../quick-start/rendering-elements/">&laquo; Назад</a>
-        <a class="next" href="../../quick-start/state-and-lifecycle/">Далее &raquo;</a>
+    <div class="lr-btn">
+        <button class="atuin-btn" onclick="window.location.href = '../../quick-start/rendering-elements/index.html';"><i class="fa fa-chevron-circle-left" aria-hidden="true"> </i><span>_</span>Назад</button>
+        <button class="atuin-btn" onclick="window.location.href = '../../quick-start/state-and-lifecycle/index.html';">Далее<span>_</span><i class="fa fa-chevron-circle-right" aria-hidden="true"></i> </button>
     </div>
 </div>
 
