--- a/examples/quick-start/conditional-rendering/index.html
+++ b/examples/quick-start/conditional-rendering/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../../../css/header.css">
     <link rel="stylesheet" href="../../../css/content.css">
     <link rel="stylesheet" href="../../../libraries/prism.css">
+    <link rel="stylesheet" href="../../../libraries/font-awesome/css/font-awesome.css">
 
     <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
@@ -301,9 +302,9 @@
     <p>Возврат значения <mark>null</mark> из метода компонента <mark>render</mark> не влияет на другие методы. Например,
     <mark>componentWillUpdate</mark> и <mark>componentDidUpdate</mark> будут нормально работать.</p>
 
-    <div class="button">
-        <a href="../../quick-start/handling-events/">&laquo; Назад</a>
-        <a class="next" href="../../quick-start/lists-and-keys/">Далее &raquo;</a>
+    <div class="lr-btn">
+        <button class="atuin-btn" onclick="window.location.href = '../../quick-start/handling-events/index.html';"><i class="fa fa-chevron-circle-left" aria-hidden="true"> </i><span>_</span>Назад</button>
+        <button class="atuin-btn" onclick="window.location.href = '../../quick-start/lists-and-keys/index.html';">Далее<span>_</span><i class="fa fa-chevron-circle-right" aria-hidden="true"></i> </button>
     </div>
 </div>
 
