--- a/examples/quick-start/handling-events/index.html
+++ b/examples/quick-start/handling-events/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../../../css/header.css">
     <link rel="stylesheet" href="../../../css/content.css">
     <link rel="stylesheet" href="../../../libraries/prism.css">
+    <link rel="stylesheet" href="../../../libraries/font-awesome/css/font-awesome.css">
 
     <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
@@ -220,9 +221,9 @@
     второго ( ID - первый) параметра. С помощью стрелочной функции мы передаём его явно, и благодаря
     <mark>bind</mark> любые дополнительные параметры будут автоматически перенаправлены.</p>
 
-    <div class="button">
-        <a href="../../quick-start/state-and-lifecycle/">&laquo; Назад</a>
-        <a class="next" href="../../quick-start/conditional-rendering/">Далее &raquo;</a>
+    <div class="lr-btn">
+        <button class="atuin-btn" onclick="window.location.href = '../../quick-start/state-and-lifecycle/index.html';"><i class="fa fa-chevron-circle-left" aria-hidden="true"> </i><span>_</span>Назад</button>
+        <button class="atuin-btn" onclick="window.location.href = '../../quick-start/conditional-rendering/index.html';">Далее<span>_</span><i class="fa fa-chevron-circle-right" aria-hidden="true"></i> </button>
     </div>
 </div>
 
