--- a/examples/quick-start/hello-world/index.html
+++ b/examples/quick-start/hello-world/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../../../css/header.css">
     <link rel="stylesheet" href="../../../css/content.css">
     <link rel="stylesheet" href="../../../libraries/prism.css">
+    <link rel="stylesheet" href="../../../libraries/font-awesome/css/font-awesome.css">
 
     <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
@@ -78,8 +79,8 @@
         После того, как вы освоите React, вы сможете создавать комплексные приложения из небольших повторяющихся
         частей.</p>
 
-    <div class="button">
-        <a class="next" href="../../quick-start/introducing-jsx/">Далее &raquo;</a>
+    <div class="lr-btn">
+        <button class="atuin-btn" onclick="window.location.href = '../../quick-start/introducing-jsx/index.html';">Далее<span>_</span><i class="fa fa-chevron-circle-right" aria-hidden="true"></i> </button>
     </div>
 </div>
 
