--- a/examples/quick-start/introducing-jsx/index.html
+++ b/examples/quick-start/introducing-jsx/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../../../css/header.css">
     <link rel="stylesheet" href="../../../css/content.css">
     <link rel="stylesheet" href="../../../libraries/prism.css">
+    <link rel="stylesheet" href="../../../libraries/font-awesome/css/font-awesome.css">
 
     <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
@@ -231,9 +232,9 @@
         <p>Мы рекомендуем использовать в ваших проектах Babel, для более комфортной работы с ES6 и JSX.</p>
     </div>
 
-    <div class="button">
-        <a href="../../quick-start/hello-world/">&laquo; Назад</a>
-        <a class="next" href="../../quick-start/rendering-elements/">Далее &raquo;</a>
+    <div class="lr-btn">
+        <button class="atuin-btn" onclick="window.location.href = '../../quick-start/hello-world/index.html';"><i class="fa fa-chevron-circle-left" aria-hidden="true"> </i><span>_</span>Назад</button>
+        <button class="atuin-btn" onclick="window.location.href = '../../quick-start/rendering-elements/index.html';">Далее<span>_</span><i class="fa fa-chevron-circle-right" aria-hidden="true"></i> </button>
     </div>
 </div>
 
