--- a/examples/quick-start/lifting-state-up/index.html
+++ b/examples/quick-start/lifting-state-up/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../../../css/header.css">
     <link rel="stylesheet" href="../../../css/content.css">
     <link rel="stylesheet" href="../../../libraries/prism.css">
+    <link rel="stylesheet" href="../../../libraries/font-awesome/css/font-awesome.css">
 
     <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
@@ -435,9 +436,9 @@
     передачей информации по дереву, пока не найдете компонент, ответственный за обновление состояния. Это позволяет легко
     отслеживать ошибки в коде.</p>
 
-    <div class="button">
-        <a href="../../quick-start/forms/">&laquo; Назад</a>
-        <a class="next" href="../../quick-start/composition-vs-inheritance/">Далее &raquo;</a>
+    <div class="lr-btn">
+        <button class="atuin-btn" onclick="window.location.href = '../../quick-start/forms/index.html';"><i class="fa fa-chevron-circle-left" aria-hidden="true"> </i><span>_</span>Назад</button>
+        <button class="atuin-btn" onclick="window.location.href = '../../quick-start/composition-vs-inheritance/index.html';">Далее<span>_</span><i class="fa fa-chevron-circle-right" aria-hidden="true"></i> </button>
     </div>
 </div>
 
