--- a/examples/quick-start/lists-and-keys/index.html
+++ b/examples/quick-start/lists-and-keys/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../../../css/header.css">
     <link rel="stylesheet" href="../../../css/content.css">
     <link rel="stylesheet" href="../../../libraries/prism.css">
+    <link rel="stylesheet" href="../../../libraries/font-awesome/css/font-awesome.css">
 
     <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
@@ -360,9 +361,9 @@
     решать, стоит ли выносить переменную для лучшей читаемости. Помните: если тело <mark>map()</mark> имеет слишком
     много вложений, то стоит повыносить компоненты.</p>
 
-    <div class="button">
-        <a href="../../quick-start/conditional-rendering/">&laquo; Назад</a>
-        <a class="next" href="../../quick-start/forms/">Далее &raquo;</a>
+    <div class="lr-btn">
+        <button class="atuin-btn" onclick="window.location.href = '../../quick-start/conditional-rendering/index.html';"><i class="fa fa-chevron-circle-left" aria-hidden="true"> </i><span>_</span>Назад</button>
+        <button class="atuin-btn" onclick="window.location.href = '../../quick-start/forms/index.html';">Далее<span>_</span><i class="fa fa-chevron-circle-right" aria-hidden="true"></i> </button>
     </div>
 </div>
 
