--- a/examples/quick-start/thinking-in-react/index.html
+++ b/examples/quick-start/thinking-in-react/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../../../css/header.css">
     <link rel="stylesheet" href="../../../css/content.css">
     <link rel="stylesheet" href="../../../libraries/prism.css">
+    <link rel="stylesheet" href="../../../libraries/font-awesome/css/font-awesome.css">
     <link rel="stylesheet" href="style.css">
 
     <script src="https://unpkg.com/react@16/umd/react.development.js"></script>
@@ -251,8 +252,8 @@
         <div id="container"></div>
     </div>
 
-    <div class="button">
-        <a href="../../quick-start/composition-vs-inheritance/">&laquo; Назад</a>
+    <div class="lr-btn">
+        <button class="atuin-btn" onclick="window.location.href = '../../quick-start/composition-vs-inheritance/index.html';"><i class="fa fa-chevron-circle-left" aria-hidden="true"> </i><span>_</span>Назад</button>
     </div>
 </div>
 
