--- a/examples/redux/async-actions/index.html
+++ b/examples/redux/async-actions/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../../../css/header.css">
     <link rel="stylesheet" href="../../../css/content.css">
     <link rel="stylesheet" href="../../../libraries/prism.css">
+    <link rel="stylesheet" href="../../../libraries/font-awesome/css/font-awesome.css">
 
     <script src="../../../libraries/prism.js"></script>
 
@@ -599,9 +600,10 @@
     с redux-rx. Вы даже можете писать собственное связующее ПО, для описания вызовов вашего API. Решать вам, попробовать
     несколько вариантов, выбрать конвенции, которые вам нравятся и следовать им, будь то с использованием связующего ПО
     или без него.</p>
-    <div class="button">
-        <a href="../../redux/usage-with-react/">&laquo; Назад</a>
-        <a class="next" href="../../redux/async-flow/">Далее &raquo;</a>
+
+    <div class="lr-btn">
+        <button class="atuin-btn" onclick="window.location.href = '../../redux/usage-with-react/index.html';"><i class="fa fa-chevron-circle-left" aria-hidden="true"> </i><span>_</span>Назад</button>
+        <button class="atuin-btn" onclick="window.location.href = '../../redux/async-flow/index.html';">Далее<span>_</span><i class="fa fa-chevron-circle-right" aria-hidden="true"></i> </button>
     </div>
 
 </div>
