--- a/examples/redux/async-flow/index.html
+++ b/examples/redux/async-flow/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../../../css/header.css">
     <link rel="stylesheet" href="../../../css/content.css">
     <link rel="stylesheet" href="../../../libraries/prism.css">
+    <link rel="stylesheet" href="../../../libraries/font-awesome/css/font-awesome.css">
 
     <script src="../../../libraries/prism.js"></script>
 
@@ -58,11 +59,10 @@
     <p>Когда последнее связующее ПО в цепочке отправляет действие, оно должно быть простым объектом. Дальше в дело
     вступает синхронный поток данных Redux.</p>
 
-    <div class="button">
-        <a href="../../redux/async-actions/">&laquo; Назад</a>
-        <a class="next" href="../../redux/middleware/">Далее &raquo;</a>
+    <div class="lr-btn">
+        <button class="atuin-btn" onclick="window.location.href = '../../redux/async-actions/index.html';"><i class="fa fa-chevron-circle-left" aria-hidden="true"> </i><span>_</span>Назад</button>
+        <button class="atuin-btn" onclick="window.location.href = '../../redux/middleware/index.html';">Далее<span>_</span><i class="fa fa-chevron-circle-right" aria-hidden="true"></i> </button>
     </div>
-
 </div>
 
 </body>
