--- a/examples/redux/middleware/index.html
+++ b/examples/redux/middleware/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../../../css/header.css">
     <link rel="stylesheet" href="../../../css/content.css">
     <link rel="stylesheet" href="../../../libraries/prism.css">
+    <link rel="stylesheet" href="../../../libraries/font-awesome/css/font-awesome.css">
 
     <script src="../../../libraries/prism.js"></script>
 
@@ -582,9 +583,9 @@
             )
         )
     </code></pre>
-
-    <div class="button">
-        <a href="../../redux/async-flow/">&laquo; Назад</a>
+    
+    <div class="lr-btn">
+        <button class="atuin-btn" onclick="window.location.href = '../../redux/async-flow/index.html';"><i class="fa fa-chevron-circle-left" aria-hidden="true"> </i><span>_</span>Назад</button>
     </div>
 
 </div>
