--- a/examples/redux/reducers/index.html
+++ b/examples/redux/reducers/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../../../css/header.css">
     <link rel="stylesheet" href="../../../css/content.css">
     <link rel="stylesheet" href="../../../libraries/prism.css">
+    <link rel="stylesheet" href="../../../libraries/font-awesome/css/font-awesome.css">
 
     <script src="../../../libraries/prism.js"></script>
 
@@ -466,9 +467,10 @@
         <p>Поскольку <mark>import *</mark> — это все еще новый синтаксис, мы не используем его нигде в документации во
         избежание путаницы, но вы можете случайно наткнуться на него в каких-нибудь примерах кода из сообщества.</p>
     </div>
-    <div class="button">
-        <a href="../../redux/actions/">&laquo; Назад</a>
-        <a class="next" href="../../redux/store/">Далее &raquo;</a>
+
+    <div class="lr-btn">
+        <button class="atuin-btn" onclick="window.location.href = '../../redux/actions/index.html';"><i class="fa fa-chevron-circle-left" aria-hidden="true"> </i><span>_</span>Назад</button>
+        <button class="atuin-btn" onclick="window.location.href = '../../redux/store/index.html';">Далее<span>_</span><i class="fa fa-chevron-circle-right" aria-hidden="true"></i> </button>
     </div>
 
 </div>
