--- a/examples/redux/usage-with-react/index.html
+++ b/examples/redux/usage-with-react/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../../../css/header.css">
     <link rel="stylesheet" href="../../../css/content.css">
     <link rel="stylesheet" href="../../../libraries/prism.css">
+    <link rel="stylesheet" href="../../../libraries/font-awesome/css/font-awesome.css">
 
     <script src="../../../libraries/prism.js"></script>
 
@@ -518,11 +519,10 @@
     <p>Пример работы нашего разработанного списка дел можно посмотреть на
     <a href="https://codesandbox.io/s/github/reduxjs/redux/tree/master/examples/todos">CodeSandbox</a>.</p>
 
-    <div class="button">
-        <a href="../../redux/data-flow/">&laquo; Назад</a>
-        <a class="next" href="../../redux/async-actions/">Далее &raquo;</a>
+    <div class="lr-btn">
+        <button class="atuin-btn" onclick="window.location.href = '../../redux/data-flow/index.html';"><i class="fa fa-chevron-circle-left" aria-hidden="true"> </i><span>_</span>Назад</button>
+        <button class="atuin-btn" onclick="window.location.href = '../../redux/async-actions/index.html';">Далее<span>_</span><i class="fa fa-chevron-circle-right" aria-hidden="true"></i> </button>
     </div>
-
 </div>
 
 </body>
