Всё, что было, добавлено в «Справочник»

--- a/examples.html
+++ b/examples.html
@@ -89,12 +89,12 @@
 
             <p class="section">Справочник</p>
             <ul>
-                <li><a href="#"><span>• </span>React</a></li>
-                <li><a href="#"><span>• </span>React.Component</a></li>
-                <li><a href="#"><span>• </span>ReactDOM</a></li>
-                <li><a href="#"><span>• </span>ReactDOMServer</a></li>
-                <li><a href="#"><span>• </span>Элементы DOM</a></li>
-                <li><a href="#"><span>• </span>SyntheticEvent</a></li>
+                <li><a href="examples/reference/react-api/index.html"><span>• </span>React</a></li>
+                <li><a href="examples/reference/react-component/index.html"><span>• </span>React.Component</a></li>
+                <li><a href="examples/reference/react-dom/index.html"><span>• </span>ReactDOM</a></li>
+                <li><a href="examples/reference/react-dom-server/index.html"><span>• </span>ReactDOMServer</a></li>
+                <li><a href="examples/reference/dom-elements/index.html"><span>• </span>Элементы DOM</a></li>
+                <li><a href="examples/reference/synthetic-event/index.html"><span>• </span>SyntheticEvent</a></li>
                 <li><a href="#"><span>• </span>Утилиты тестирования</a></li>
                 <li><a href="#"><span>• </span>Поверхностный рендеринг</a></li>
                 <li><a href="#"><span>• </span>Тестовый отрисовщик</a></li>
