Исправление ссылок, подключений

--- a/labs.html
+++ b/labs.html
@@ -44,6 +44,11 @@
         <p class="section">Лабораторные работы по React.js</p>
         <div class="lr-block">
             <ol class="lr-list">
+                <!-- TODO: в релизе вырезать -->
+                <p class="section-title">Раздел 0. Банк заданий</p>
+                <li><a href="labs/task-bank.html">Банк заданий</a></li>
+            </ol>
+            <ol class="lr-list">
                 <p class="section-title">Раздел 1. Установка и введение в React</p>
                 <li><a href="labs/lab01/index.html">Лабораторная  работа. Тема.</a></li>
                 <li><a href="labs/lab02/index.html">Лабораторная  работа. Тема.</a></li>
