3 задание 1-ой лабораторной работы + стили для изображения

--- a/labs/lab1/index.html
+++ b/labs/lab1/index.html
@@ -86,7 +86,7 @@
         <p>Создайте отдельный файл для скрипта. Перенесите в него весь код из исходного файла. Продемонстрируйте подключение к HTML скрипта, содержащего JSX-код.</p>
 
         <p>Измените код в файле так, чтобы при открытии страницы отображалась сегодняшняя дата.</p>
-
+        <hr>
         <div class="section">Задание 2</div>
 
         <p>В ответ на запрос сервер фондовой биржи вернул следующий объект, содержащий названия акций, их текущую цену и изменение цены:</p>
@@ -126,6 +126,12 @@
         
         <!-- TODO: добавить скриншот, как должна выглядеть таблица -->
 
+       <hr>
+       <div class="section">Задание 3</div>
+       <p>Разработать проект шахматной доски по примеру приведенному ниже с использованием дочерених элементов JSX. Допускается использование стилей только для изменения цвета клеток (.black, .white) и для общего контейнера всей доски. </p>
+       <img class="lr-img" src="img/Chess.jpg" alt="Шахматная доска">
+       <p>Добавьте нотации (подписи) шахматной доски используя отдельные элементы.</p>
+       <p>Доп. задание: Реализуйте нотации с использование циклов и отдельных функций.</p>
         <div class="lr-btn">
            <button class="atuin-btn" onclick="window.location.href = '../lab0/index.html';"><i class="fa fa-chevron-circle-left" aria-hidden="true"> </i><span>_</span>Назад</button>
            <button class="atuin-btn" onclick="window.location.href = '../lab1/index.html';">Далее<span>_</span><i class="fa fa-chevron-circle-right" aria-hidden="true"></i> </button>
